// This file is part of OpenTSDB.
// Copyright (C) 2018  The OpenTSDB Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_package = "net.opentsdb.data.pbuf";
option java_outer_classname = "TimeSpecificationPB";

import "TimeStamp.proto";

/*
 * A net.opentsdb.query.QueryResult implementation. 
 */
message TimeSpecification {
  
  /* The start timestamp for the spec. */
  TimeStamp start = 1;

  /* The end timestamp for the spec. */
  TimeStamp end = 2;
  
  /* The interval, e.g. "1m" or "15m". */
  string interval = 3;
  
  /* The optional timezone. */
  string timeZone = 4;
  
}